force-app/main/default/objects/Configure_Product__c/Configure_Product__c.object-meta.xml
<CustomObject>
    <label>Configure Product</label>
    <nameField>
        <label>Configure Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configure Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>