force-app/main/default/objects/Configure_Product__c/fields/Calculated_Flow_Rate__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Flow_Rate__c</fullName>
    <label>Calculated Flow Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>