force-app/main/default/objects/Configure_Product__c/fields/Converted_Back_Pressure_Value__c.field-meta.xml
<CustomField>
    <fullName>Converted_Back_Pressure_Value__c</fullName>
    <label>Converted Back Pressure Value</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>