force-app/main/default/objects/Configure_Product__c/fields/Converted_Different_Temperature_Settin__c.field-meta.xml
<CustomField>
    <fullName>Converted_Different_Temperature_Settin__c</fullName>
    <label>Converted (Different) Temperature Settin</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>