force-app/main/default/objects/Configure_Product__c/fields/Converted_Temperature_Setting__c.field-meta.xml
<CustomField>
    <fullName>Converted_Temperature_Setting__c</fullName>
    <label>Converted Temperature Setting</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>