force-app/main/default/objects/Configure_Product__c/fields/Evaluation_Per__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Per__c</fullName>
    <label>Evaluation Per</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASME Gas/Vapor</fullName>
            </value>
            <value>
                <fullName>ASME Water</fullName>
            </value>
            <value>
                <fullName>ASME Steam</fullName>
            </value>
            <value>
                <fullName>API Gas/Vapor</fullName>
            </value>
            <value>
                <fullName>API Liquid</fullName>
            </value>
            <value>
                <fullName>API Steam</fullName>
            </value>
            <value>
                <fullName>ISO Gas/Vapor</fullName>
            </value>
            <value>
                <fullName>ISO Liquid</fullName>
            </value>
            <value>
                <fullName>ISO Dry Steam</fullName>
            </value>
            <value>
                <fullName>ISO Wet Steam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>