force-app/main/default/objects/Configure_Product__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas List</fullName>
            </value>
            <value>
                <fullName>Liquid List</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>Customer Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>