force-app/main/default/objects/Configure_Product__c/fields/Molecular_Weight__c.field-meta.xml
<CustomField>
    <fullName>Molecular_Weight__c</fullName>
    <label>Molecular Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>