force-app/main/default/objects/Configure_Product__c/fields/Overpressure__c.field-meta.xml
<CustomField>
    <fullName>Overpressure__c</fullName>
    <label>% Overpressure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>16%</fullName>
            </value>
            <value>
                <fullName>21%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>