force-app/main/default/objects/Configure_Product__c/fields/Ratio_of_Specific_Heats__c.field-meta.xml
<CustomField>
    <fullName>Ratio_of_Specific_Heats__c</fullName>
    <label>Ratio of Specific Heats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>