force-app/main/default/objects/Configure_Product__c/fields/Relieving_Pressure_at_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Relieving_Pressure_at_Inlet__c</fullName>
    <label>Relieving Pressure at Inlet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>% Overpressure</fullName>
            </value>
            <value>
                <fullName>Enter Relieving Pressure Value/ units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>