force-app/main/default/objects/Configure_Product__c/fields/Temperature_Setting_Units__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Setting_Units__c</fullName>
    <label>Temperature Setting Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deg F</fullName>
            </value>
            <value>
                <fullName>Deg C</fullName>
            </value>
            <value>
                <fullName>Deg R</fullName>
            </value>
            <value>
                <fullName>Deg K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>