force-app/main/default/objects/Configure_Product__c/fields/Viscosity__c.field-meta.xml
<CustomField>
    <fullName>Viscosity__c</fullName>
    <label>Viscosity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>