force-app/main/default/objects/Configure_Product__c/fields/Viscosity_units__c.field-meta.xml
<CustomField>
    <fullName>Viscosity_units__c</fullName>
    <label>Viscosity units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>centipoise</fullName>
            </value>
            <value>
                <fullName>Pa.s</fullName>
            </value>
            <value>
                <fullName>poise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>