force-app/main/default/objects/Configure_Product__c/fields/Withstand2__c.field-meta.xml
<CustomField>
    <fullName>Withstand2__c</fullName>
    <label>Vacuum Withstand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive Pressure</fullName>
            </value>
            <value>
                <fullName>No Requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>